Unreviewed, non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=236216

Source/JavaScriptCore:

This missing include was causing non-unified builds to fail linking
libWPEWebkit with undefined JSC::Structure::get(...) after dropping
gold as the default linker in 246713@main.


* wasm/js/JSWebAssemblyException.cpp:

Source/WebCore:


* layout/formattingContexts/inline/InlineLineBoxVerticalAligner.h:
* workers/shared/context/SharedWorkerThread.cpp:



Canonical link: https://commits.webkit.org/246885@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289199 268f45cc-cd09-0410-ab3c-d52691b4dbfc