Source/WebCore/layout/formattingContexts/inline/InlineLineBoxVerticalAligner.h
@@ -27,6 +27,7 @@
 
 #if ENABLE(LAYOUT_FORMATTING_CONTEXT)
 
+#include "InlineFormattingContext.h"
 #include "InlineFormattingGeometry.h"
 
 namespace WebCore {
